Added more loading icons

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <script type="text/javascript" src="bootbox.min.js"></script>
     </head>
     <body>
+        <div style="position: absolute; left: calc(50vw - 10px); top: calc(40vh - 10px); transform: scale(1.5)" class="loading-icon" id="the-loading-icon"></div>
         <!-- <div id="dialog" title="Answer call?">
             Are you sure you want to answer?
         </div> -->
