Updated 'GNU GPL' to 'BSD license'

--- a/about.html
+++ b/about.html
@@ -86,10 +86,11 @@
                         Free as in freedom
                     </div>
                     <div class="med">
-                        Unlike Skype, which which is proprietary software, RollCall is free software, licensed under the GNU General Public License. That
+                        Unlike Skype, which which is proprietary software, RollCall is free software, licensed under the BSD license. That
                         means you're free to use and modify it, as long as you give the same freedoms to everyone who uses your modified version. Additionally,
                         you can see exactly how RollCall is made, unlike Skype, where nobody is really sure.
-                        For exact details, see <a href="license.html">license</a>.<br/><br/>
+                        For exact details, see <a href="license.html">license</a>.<br/>
+                        <br/>
                         Want a 100% free software stack? Use <a href="//www.mozilla.org/firefox">Firefox</a> and <a href="//www.debian.org">Debian Linux.</a>
                     </div>
                     <br/>
