Opens a new tab when a menu link is opened inside the webapp.

--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
                 asyncLoad("myui.js");
                 asyncLoad("menu.js");
             });
+            isMainPage = true;
         </script>
     </body>
 </html>
