Updated the license page with more information relating to the license.

--- a/license.html
+++ b/license.html
@@ -62,23 +62,17 @@
             <br/>
             One prominent example of free software is Linux; another is Firefox. We reccommend you use Firefox and Linux to maintain a free software stack; we do.
                 <span class="title-main">Can you give me a quick summary of the license?</span>
-            RollCall is distributed under the BSD 2-clause license. Here is what it means:
+            RollCall is distributed under the BSD 3-clause license. Here is what it means:
             <ul>
-                <li>When the software is distributed, it must include the following, or how to get it:
-                    <ul>
-                        <li>The GNU GPL (the terms under which it is distributed)</li>
-                        <li>The source code (when you download Firefox, it is in a machine readable format, but virtually impossible to read by humans; the source code
-                        is what programmers write, which then gets converted into the Firefox you download; some vendors don't give you the source, which limits your freedoms).</li>
-                    </ul>
-                </li>
-                <li>You cannot impose further restrictions on the rights granted by the GPL; however, you may include software with a more permissive license (for example,
-                RollCall uses Velocity.JS, which is licensed under the (very) permissive MIT License)</li>
-                <li>You may redistribute the software, as long as it "displays prominent notices" that it has been changed</li>
-                <li>These obligations are only triggered when you distribute it - not for internal use</li>
-                <li>GPL-licensed software may be run for any purposes, even as a tool for creating non-free software; for example, many non-free programs are compiled with GCC, which is GPL.</li>
+                <li>When the software is distriubted, it must display the license [available below, in this case].</li>
+                <li>If you distribute this without the source, you still have to include the license.</li>
+                <li>You can't use my name to endorse your modified versions.</li>
+                <li>This software is provided with ABSOLUTELY NO WARRANTIES; it is provided "as is." There is no warranty of "merchantibility" or "fitness for a particular purpose".
+                I may never be held liable for any damages caused by this program, even if you lose data, or have your laundry eaten; even if I knew that damage could happen;
+                even if the damage is caused by negligence or any other cause.</li>
             </ul>
                 <span class="title-main">Actual License</span>
-            The following is the license. It is the BSD 2-clause license. It is present at the top of every file.
+            The following is the license. It's not actually that complicated; you don't have to be a lawyer to understand it. It's the BSD 3-clause license, present at the top of every file.
             <div style="display: block; padding: 9.5px; margin: 0px 0px 10px; line-height: 1.42857; color: rgb(51, 51, 51); background-color: rgb(245, 245, 245);
                 border: 1px solid rgb(204, 204, 204); border-radius: 4px;">
                 Copyright (c) 2015 Ethan White. All rights reserved.<br/>
