Bottombar on all the things

--- a/license.html
+++ b/license.html
@@ -39,7 +39,7 @@
             RollCall is free as in freedom.<br/>
             That's our license in six words.
         </div>
-        <div style="width: 60vw; font-size: 18px; margin-left: 20vw; margin-bottom: 40vh;">
+        <div style="width: 60vw; font-size: 18px; margin-left: 20vw; margin-bottom: 5vh;">
                 <span class="title-main">"Why should I care?"</span>
             RollCall is free software. But, why is that so special? "I use Windows and Chrome, and they aren't free software," you say.
             Well, it comes down to your freedoms and a guarantee of privacy. How do you know that Google hasn't put a backdoor into Chrome, allowing
@@ -92,6 +92,7 @@
                 EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
             </div>
         </div>
+        <script type="text/javascript" src="bottombar.js"></script>
         <script type="text/javascript" src="menu.js"></script>
     </body>
 </html>
