--- a/privacy.html
+++ b/privacy.html
@@ -39,7 +39,7 @@
             Everything personal is encrypted.<br/>
             That's our privacy policy in four words.
         </div>
-        <div style="width: 60vw; font-size: 18px; margin-left: 20vw; margin-bottom: 40vh;">
+        <div style="width: 60vw; font-size: 18px; margin-left: 20vw; margin-bottom: 5vh;">
                 <span class="title-main">"Why should I care?"</span>
             RollCall has real privacy. But, you say, "Why should I care? I use Google, and it tracks me, and I use Chrome, and it tracks me, and I use Windows, which tracks me,
             too (albeit much more insidiously)."
@@ -106,7 +106,7 @@
             <br/>
             However, do note that this software is distributed with absolutely no warranty whatsoever; though, if you do notice a bug, please report it.
         </div>
-
+        <script type="text/javascript" src="bottombar.js"></script>
         <script type="text/javascript" src="menu.js"></script>
     </body>
 </html>
