--- a/about.html
+++ b/about.html
@@ -140,17 +140,7 @@
                 </div>
             </center>
         </div>
-        <div class="section dark white osl big" id="links-section" style="height: 40vh; padding-top: 10px;">
-            <div class="container-fluid">
-                <div class="col-md-4"></div>
-                <div class="col-md-2">
-                    <a href="license.html">License</a>
-                </div>
-                <div class="col-md-2">
-                    <a href="privacy.html">Privacy</a>
-                </div>
-            </div>
-        </div>
+        <script type="text/javascript" src="bottombar.js"></script>
         <script type="text/javascript" src="myui.js"></script>
         <script type="text/javascript" src="menu.js"></script>
         <script type="text/javascript">
