License clarification (again)

--- a/license.html
+++ b/license.html
@@ -32,7 +32,7 @@
         <script type="text/javascript" src="firebase.js"></script>
         <script type="text/javascript" src="login.js"></script>
     </head>
-    <body>
+    <body data-menu="light">
         <div style="width: 100%; height: 40vh" class="dark white osl big center">
             <br/>
             <br/>
@@ -65,11 +65,12 @@
             RollCall is distributed under the BSD 3-clause license. Here is what it means:
             <ul>
                 <li>When the software is distriubted, it must display the license [available below, in this case].</li>
-                <li>If you distribute this without the source, you still have to include the license.</li>
+                <li>If you distribute without the source, you still have to include the license.</li>
                 <li>You can't use my name to endorse your modified versions.</li>
-                <li>This software is provided with ABSOLUTELY NO WARRANTIES; it is provided "as is." There is no warranty of "merchantibility" or "fitness for a particular purpose".
-                I may never be held liable for any damages caused by this program, even if you lose data, or have your laundry eaten; even if I knew that damage could happen;
-                even if the damage is caused by negligence or any other cause.</li>
+                <li>This software is provided with ABSOLUTELY NO WARRANTY; it is provided "as is." There is not even the warranty of "merchantibility" or "fitness for a particular purpose".
+                The author may never be held liable for any damages caused by this program, "arising in any way out of the use of the software,"
+                even if you lose data, have your laundry eaten, or any other form that damage could take, even if the author knew that damage could happen; even if the damage is caused by negligence or
+                any other cause.</li>
             </ul>
                 <span class="title-main">Actual License</span>
             The following is the license. It's not actually that complicated; you don't have to be a lawyer to understand it. It's the BSD 3-clause license, present at the top of every file.
