Completely re-did first page of setup dialog and changed the last

--- a/index.html
+++ b/index.html
@@ -52,51 +52,10 @@
             <div id="setup-title">Setting things up</div>
             <div id="setup-pages">
                 <div id="setup-page-start" class="setup-page">
-                    <div class="opensans title text-center">Welcome to PeerJS.</div>
-                    <div class="container-fluid" style="width: 100%; height: 80%;">
-                        <div class="col-md-4" style="height: 100%;">
-                            <div class="opensans text-center" style="font-size: 32px;">Talk anywhere</div>
-                            <div class="container-fluid text-light">
-                                <div class="col-md-6" style="font-size: 1.9vh;">
-                                    <div style="font-size: 18px;" class="text-center text-normal">Runs in any (modern) browser</div>
-                                    PeerJS works on Firefox 22+, Chrome 23+, Opera 18+, Firefox OS, Firefox for Android, Chrome for android, and more. That's over 1 BILLION devices!
-                                </div>
-                                <div class="col-md-6" style="font-size: 1.9vh;">
-                                    <div style="font-size: 18px;" class="text-center text-normal">Wherever you are, your phone is.</div>
-                                    PeerJS works on Firefox for Android, Chrome for Android, and Firefox OS. Wherever you are, you can talk, cheaper than making a phone call.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4" style="height: 100%;">
-                            <div class="opensans text-center" style="font-size: 32px;">Free as in freedom</div>
-                            <div class="container-fluid text-light">
-                                <div class="col-md-6" style="font-size: 1.9vh;">
-                                    <div style="font-size: 18px;" class="text-center text-normal">Skype tracks you.<br/>We can't; it's just not possible.</div>
-                                    When you chat with PeerJS, it's fully encrypted, end-to-end, and never goes through our servers. Soon to come: message encryption.
-                                </div>
-                                <div class="col-md-6" style="font-size: 1.9vh;">
-                                    <div style="font-size: 18px;" class="text-center text-normal">Free and open source software</div>
-                                    PeerJS is free software, licensed under the GNU GPL, version 2 (with the exception of our third-party
-                                    libraries, but they're free software too). That means you are free to use and modify it. Contrast this with Skype; you have
-                                    no idea what Skype's code looks like.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4" style="height: 100%;">
-                            <div class="opensans text-center" style="font-size: 32px;">High quality</div>
-                            <div class="container-fluid text-light">
-                                <div class="col-md-6" style="font-size: 1.9vh;">
-                                    <div style="font-size: 18px;" class="text-center text-normal">The same quality as your gear.</div>
-                                    If you're using the 1080p 30fps camera on your laptop, PeerJS will display 1080p, 30fps. Period. We can do everything your recording gear
-                                    can.
-                                </div>
-                                <div class="col-md-6" style="font-size: 1.9vh;">
-                                    Skype makes you pay for many advanced features that give you a better quality call. Over the years, it's cost more and given less. PeerJS
-                                    is 100% free.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="opensans title text-center">Welcome to RollCall.</div>
+                    <div class="opensans text-center" style="font-size: 32px">Real privacy, free as in freedom, everywhere.<br/>
+                    <a href="about.html" style="margin-right: 40px;" target="_blank">Why RollCall</a>
+                    <a href="privacy.html" style="margin-right: 40px;" target="_blank">Privacy</a> <a href="license.html" target="_blank">Freedom</a></div>
                 </div>
                 <div id="setup-page-access-mic" class="setup-page">
                     <div class="opensans title text-center">We need access to a few things.</div>
@@ -133,18 +92,14 @@
                             </div>
                         </div>
                     </div>
+                    <center class="opensans" style="font-size: 20px;"><span style="color: green;">Green</span> = Enabled, <span style="rgb(216, 39, 83)">Red</span> = Disabled<br/>
+                    If you have nothing enabled, crazy things will start to happen and RollCall may eat your laundry. Be warned.</center>
                 </div>
                 <div id="setup-page-access-confirm" class="setup-page">
                     <div class="opensans title text-center">That's it.</div>
                     <div class="opensans text-center" style="font-size: 32px;">You're now setup to use PeerJS</div>
-                    <div>
-                        <ul>
-                            <li>
-                                Every time you load this page<!-- TODO: Re-word -->, we'll ask you for the access you specified.
-                                If you want to, you can even set your browser to automatically accept it, but if you don't, that's cool, too.
-                            </li>
-                        </ul>
-                    </div>
+                    <div class="opensans" style="margin-left: 5vw; font-size: 20px">We'll ask you for access to those things when you start up. <b>If you do not allow them,
+                    crazy things including laundry-eating <i>will</i> happen and any bug reports will be rejected. Be warned.</b></div>
                 </div>
             </div>
             <button id="setup-next" class="btn btn-primary btn-lg">Next</button>
