Auto-select username field in login page

--- a/login.html
+++ b/login.html
@@ -116,6 +116,9 @@
                     $("#log-in")[0].click();
                 }
             });
+            $(document).on("ready", function() {
+                $("#username").focus();
+            });
         </script>
         <!-- Menu -->
         <script type="text/javascript" src="menu.js"></script>
