More menu redesign

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <link rel="stylesheet" type="text/css" href="btsp/css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="btsp/css/bootstrap-theme.min.css"/>
         <!-- JQuery UI -->
-        <script type="text/javascript" src="jquery-ui.js"></script>
-        <link rel="stylesheet" type="text/css" href="jquery-ui.css">
+        <!-- <script type="text/javascript" src="jquery-ui.js"></script>
+        <link rel="stylesheet" type="text/css" href="jquery-ui.css"> -->
         <!-- My stylesheet -->
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <!-- Firebase -->
