--- a/license.html
+++ b/license.html
@@ -32,7 +32,7 @@
         <script type="text/javascript" src="firebase.js"></script>
         <script type="text/javascript" src="login.js"></script>
     </head>
-    <body data-menu="light">
+    <body>
         <div style="width: 100%; height: 40vh" class="dark white osl big center">
             <br/>
             <br/>
