--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
         <div id="home-layer" class="layer">
             <div class="container-fluid screen-width screen-height no-padding" data-menu="menu1">
                 <div class="col-md-2 screen-height" style="background-color: rgb(51, 51, 51)">
+                    <div style="height: 8px"></div>
+                    <span class="mini-title" style="margin-bottom: 2px;">Your Friends</span>
                     <div class="better-list bl-big" id="username-list">
                     </div>
                 </div>
@@ -146,6 +148,7 @@
                     <!-- <div id="home-quote">Tides go in, tides go out. You can't explain that.</div>
                     <div id="home-quote-symbol">&ldquo;</div> -->
                     <div id="home-chat">
+                        <span class="mini-title light">Chat</span>
                         <div id="chat-messages">
                             <div class="chat-message">
                                 <span class="chat-message-sender">Neil DeGrasse Tyson</span>
@@ -156,25 +159,6 @@
                         </div>
                         <input type="text" id="chat-message" placeholder="Chat..." class="plain"/>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div id="credits-layer" class="layer screen-width screen-height">
-            <div class="container-fluid">
-                <div class="row credit-row">
-                    <div class="col-md-4 credit"><img src="logos/jquery.png"/></div>
-                    <div class="col-md-4 credit"><img src="logos/peerjs.png"/></div>
-                    <div class="col-md-4 credit"><img src="logos/bootstrap.png"/></div>
-                </div>
-                <div class="row credit-row">
-                    <div class="col-md-4 credit"><img src="logos/jqueryui.png"/></div>
-                    <div class="col-md-4">[Put something here]</div>
-                    <div class="col-md-4 credit">Velocity.js</div>
-                </div>
-                <div class="row credit-row">
-                    <div class="col-md-4 credit">Bootbox.js</div>
-                    <div class="col-md-4 credit"><img src="logos/glyphicons.svg"/></div>
-                    <div class="col-md-4 credit"><img src="logos/html5.svg"/></div>
                 </div>
             </div>
         </div>
