Don't forget about the laundry-eating!

--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
     </head>
     <body>
         <div style="position: absolute; left: calc(50vw - 10px); top: calc(40vh - 10px); transform: scale(1.5)" class="loading-icon" id="the-loading-icon"></div>
-        <!-- <div id="dialog" title="Answer call?">
-            Are you sure you want to answer?
-        </div> -->
         <div id="setup" style="display: none;">
             <div id="setup-title">Setting things up</div>
             <div id="setup-pages">
@@ -91,7 +88,7 @@
                         </div>
                     </div>
                     <center class="opensans" style="font-size: 20px;"><span style="color: green;">Green</span> = Enabled, <span style="rgb(216, 39, 83)">Red</span> = Disabled<br/>
-                    If you have nothing enabled, crazy things will start to happen and RollCall may eat your laundry. Be warned.</center>
+                    If you have nothing enabled, crazy things <b>will<b> start to happen and RollCall <b>will likely</b> eat your laundry. Be warned.</center>
                 </div>
                 <div id="setup-page-access-confirm" class="setup-page">
                     <div class="opensans title text-center">That's it.</div>
