Minor licensing change

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                     <center class="opensans" style="font-size: 20px;"><span style="color: green;">Green</span> = Enabled, <span style="rgb(216, 39, 83)">Red</span> = Disabled<br/>
-                    If you have nothing enabled, crazy things <b>will<b> start to happen and RollCall <b>will likely</b> eat your laundry. Be warned.</center>
+                    If you have nothing enabled, crazy things <b>will</b> start to happen and RollCall <b>will likely</b> eat your laundry. Be warned.</center>
                 </div>
                 <div id="setup-page-access-confirm" class="setup-page">
                     <div class="opensans title text-center">That's it.</div>
