Grammar and re-wording

--- a/credits.html
+++ b/credits.html
@@ -65,7 +65,7 @@
             All of the modal dialogs are handled by Bootbox.js. Although I could have done them by hand with Bootstrap, Bootbox makes it much, much easier and shorter.<br/>
             <a href="http://bootboxjs.com/">Official Website</a> | <a href="https://github.com/makeusabrew/bootbox">GitHub</a>
                 <span class="title-main">CSS3 &amp; HTML5</span>
-            Literally, I'm thanking the internet here - this entire website is possible only due to the HTML5 effort and CSS3. HTML5 makes html so much more powerful.
+            Literally, I'm thanking the internet here - this entire website is possible only due to the HTML5 effort and CSS3. HTML5 makes HTML so much more powerful.
                 <span class="title-main">WebRTC</span>
             WebRTC is the underlying framework behind PeerJS. It's an effort to enable real-time communications, or RTC on the web, hence WebRTC. It is kind of an odd specification in that it
             leaves many areas undefined, but with a good library, it's really powerful.<br/>
