--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
             $(window).on("load", function() {
                 asyncLoad("myui.js");
                 asyncLoad("menu.js");
+                asyncLoad("contextmenu.js");
             });
             isMainPage = true;
         </script>
