Fixed a typographical error in privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -57,7 +57,7 @@
             <br/>
             <ul>
                 <li>
-                    People often say I have nothing to hide, when they really do. For example, you (the reader) probably have an e-mail account or online banking account.
+                    People often say they have nothing to hide, when they really do. For example, you (the reader) probably have an e-mail account or online banking account.
                     I'm going to assume you have a password on it [if not, pretend you do for the sake of argument]. Why do you keep that password a secret? Why don't you instead display it
                     the entire world? Because you care about privacy. Even though you're doing nothing wrong, there is a certain level of expected privacy inherent in being human.
                 </li>
