Fixed another grammatical error.

--- a/privacy.html
+++ b/privacy.html
@@ -91,7 +91,7 @@
                     Fun fact: RSA stands for Rivest-Shamir-Adleman, the three inventors of the system.
                 </li>
                 <li>
-                    For calls, we rely on the encryption that is required by the WebRTC standard. In recent versions of Firefox are <i>signifigantly</i> than Chromium (Chrome and Opera).<br/>
+                    For calls, we rely on the encryption that is required by the WebRTC standard. Recent versions of Firefox are <i>signifigantly</i> than Chromium (Chrome and Opera).<br/>
                     <div style="height: 10px;"></div>
                     Here's the technical description of how Firefox is better: Firefox, starting from Firefox 38, requires the use of Perfect Forward Secrecy, in the form of Diffie-Hellman
                     key exchange or Elliptic Curve Diffie-Hellman key exchange. This means that the private key is generated uniquely every time, so if it is compromized, it only compromizes
