Did part of the UI for non-textual private key and then got bored.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                     <a href="about.html" style="margin-right: 40px;" target="_blank">Why RollCall</a>
                     <a href="privacy.html" style="margin-right: 40px;" target="_blank">Privacy</a> <a href="license.html" target="_blank">Freedom</a></div>
                 </div>
+                <div id="setup-page-privatekey-select" class="setup-page">
+                    <div class="opensans title text-center">Choose your security-annoyance ratio.</div>
+                    <div class="opensans text-center" style="font-size: 32px">We favour security, but it's your choice. [TODO]</div>
+                </div>
                 <div id="setup-page-access-mic" class="setup-page">
                     <div class="opensans title text-center">We need access to a few things.</div>
                     <div class="opensans text-center" style="font-size: 32px;">What access do you feel comfortable with?</div>
